--- a/.env.local.example
+++ b/.env.local.example
@@ -2,7 +2,7 @@
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
-DATABASE_URL=postgresql://postgres:your_password@your_project_ref.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres.your_project_ref:your_password@aws-0-region.pooler.supabase.co:6543/postgres
 STRIPE_SECRET_KEY=your_stripe_secret_key
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
 STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
